--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "roc-love-gamification",
-  "version": "4.1.0",
+  "version": "4.2.0",
   "type": "module",
   "dependencies": {
-    "@neondatabase/serverless": "^0.9.0"
+    "@neondatabase/serverless": "^0.9.0",
+    "resend": "^3.2.0"
   }
 }
